2nd attempt to fix IE bug in header spacing

--- a/src/components/styles/slidemenu.scss
+++ b/src/components/styles/slidemenu.scss
@@ -63,7 +63,7 @@ $tablet: 768px;
     }
   }
 
-  @media screen and (min-width: $laptop) {
+  @media screen and (min-width: $tablet) {
     display: none;
   }
 
